Bug 101706 - [Qt] r133953 broke the ARM_TRADITIONAL build
Summary: [Qt] r133953 broke the ARM_TRADITIONAL build
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 420+
Hardware: All All
: P1 Blocker
Assignee: Nobody
URL:
Keywords: Qt, QtTriaged
Depends on: 101757 101832
Blocks: 98606
  Show dependency treegraph
 
Reported: 2012-11-08 21:53 PST by Csaba Osztrogonác
Modified: 2012-11-11 22:42 PST (History)
10 users (show)

See Also:


Attachments
Fix (1.84 KB, patch)
2012-11-09 00:12 PST, Gabor Ballabas
no flags Details | Formatted Diff | Diff
Patch (2.50 KB, patch)
2012-11-09 07:57 PST, Gabor Ballabas
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2012-11-08 21:53:56 PST
http://build.webkit.sed.hu/builders/ARMv7%20Linux%20Qt5%20Release%20%28Build%29/builds/14679/steps/compile-webkit/logs/stdio

                 from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGJITCompiler.cpp:35:
/mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h: In member function 'JSC::AbstractMacroAssembler<JSC::ARMAssembler>::Call JSC::DFG::SpeculativeJIT::callOperation(JSC::DFG::J_DFGOperation_EDA, JSC::DFG::GPRReg, JSC::DFG::GPRReg, JSC::DFG::FPRReg, JSC::DFG::GPRReg)':
/mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h:1676:53: error: no matching function for call to 'JSC::DFG::JITCompiler::setupArgumentsWithExecState(JSC::DFG::FPRReg&, JSC::DFG::GPRReg&)'
...

and 1686:90, 1844:59, 1854:96
Comment 1 Gabor Ballabas 2012-11-09 00:12:51 PST
Created attachment 173221 [details]
Fix
Comment 2 Milian Wolff 2012-11-09 04:34:47 PST
Thanks, that works for me.
Comment 3 Csaba Osztrogonác 2012-11-09 04:37:27 PST
Comment on attachment 173221 [details]
Fix

LGTM, rs=me
Comment 4 WebKit Review Bot 2012-11-09 04:41:56 PST
Comment on attachment 173221 [details]
Fix

Clearing flags on attachment: 173221

Committed r134051: <http://trac.webkit.org/changeset/134051>
Comment 5 WebKit Review Bot 2012-11-09 04:42:00 PST
All reviewed patches have been landed.  Closing bug.
Comment 6 Csaba Osztrogonác 2012-11-09 06:47:20 PST
(In reply to comment #4)
> (From update of attachment 173221 [details])
> Clearing flags on attachment: 173221
> 
> Committed r134051: <http://trac.webkit.org/changeset/134051>

The build still fails:
http://build.webkit.sed.hu/builders/ARMv7%20Linux%20Qt5%20Release%20%28Build%29/builds/14736/steps/compile-webkit/logs/stdio
Comment 7 WebKit Review Bot 2012-11-09 06:47:33 PST
Re-opened since this is blocked by bug 101757
Comment 8 Csaba Osztrogonác 2012-11-09 07:13:31 PST
build error with the patch:
/home/oszi/WebKit/Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h:1676:53: error: no matching function for call to 'JSC::DFG::JITCompiler::setupArgumentsWithExecState(JSC::DFG::FPRReg&, JSC::DFG::GPRReg&)'
/home/oszi/WebKit/Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h:1844:59: error: no matching function for call to 'JSC::DFG::JITCompiler::setupArgumentsWithExecState(JSC::DFG::GPRReg&, JSC::DFG::GPRReg&, JSC::DFG::FPRReg&)'
Comment 9 Gabor Ballabas 2012-11-09 07:57:47 PST
Created attachment 173310 [details]
Patch

Fix for both hardfp and softfp.
Comment 10 Csaba Osztrogonác 2012-11-09 07:59:16 PST
Comment on attachment 173310 [details]
Patch

LGTM, r=me. I'll land it manually.
Comment 11 Csaba Osztrogonác 2012-11-09 08:03:21 PST
Comment on attachment 173310 [details]
Patch

Clearing flags on attachment: 173310

Committed r134071: <http://trac.webkit.org/changeset/134071>
Comment 12 Csaba Osztrogonác 2012-11-09 08:03:29 PST
All reviewed patches have been landed.  Closing bug.