[Qt] r133953 broke the ARM_TRADITIONAL build https://bugs.webkit.org/show_bug.cgi?id=101706

Patch by Gabor Ballabas <gaborb@inf.u-szeged.hu> on 2012-11-09
Reviewed by Csaba Osztrogonác.

Fix for both hardfp and softfp.

* dfg/DFGCCallHelpers.h:
(CCallHelpers):
(JSC::DFG::CCallHelpers::setupArgumentsWithExecState):

Canonical link: https://commits.webkit.org/119856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134071 268f45cc-cd09-0410-ab3c-d52691b4dbfc